syntax = "proto3";
package cart;
import "product.proto";

message Cart{
int32 id=1;
int32 user_id=2;
int32 product_id=3;
double price=4;
Product product=5;
}



message GetCartRequest{
    int32 user_id=1;
}

message GetCartResponse{
   repeated Cart cart=1;
}


message DeleteFromCartRequest{
    int32 id=1;
}
message DeleteFromCartResponse{
    string res=1;
}


message AddToCartRequest{
int32 user_id=2;
int32 product_id=3;
double price=4;
}

message AddToCartResponse{
    Cart cart=1;
}


service CartService{
rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
rpc GetCart(GetCartRequest) returns (GetCartResponse);
rpc DeleteFromCart(DeleteFromCartRequest) returns (DeleteFromCartResponse);
}